--- a/index2.html
+++ b/index2.html
@@ -8,24 +8,106 @@
     <script type="text/javascript" src="javascripts/vendor/custom.modernizr.js"></script>
 </head>
 <body>
-  <!--  <div class="theme"> 
+    <!--  <div class="theme"> 
     </div> !-->
-    <div class="row">
+<div class="row" id="doc-topbar">
         <div class="large-12 columns">
-            <nav class="top-bar">
-                <ul class="title-area">
-                    <!-- Title Area -->
-                    <li class="name">
-                        <h1>
-                            <a href="#">Top Bar</a></h1>
+          <nav class="top-bar">
+            <ul class="title-area">
+              <!-- Title Area -->
+              <li class="name">
+                <h1><a href="#">Top Bar</a></h1>
+              </li>
+              <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+              <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+            </ul>
+
+          <section class="top-bar-section">
+              <ul class="left">
+                <li class="divider"></li>
+                <li class="has-dropdown"><a href="#">Item 1</a>
+
+                  <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">« Back</a></h5></li>
+                    <li><label>Level One</label></li>
+                    <li><a href="#">Sub-item 1</a></li>
+                    <li><a href="#">Sub-item 2</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Sub-item 3</a></li>
+                    <li class="has-dropdown"><a href="#">Sub-item 4</a>
+
+                      <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">« Back</a></h5></li>
+                        <li><label>Level Two</label></li>
+                        <li class="has-dropdown"><a href="#">Sub-item 1</a>
+
+                          <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">« Back</a></h5></li>
+                            <li><label>Level Three</label></li>
+                            <li class="has-dropdown"><a href="#">Sub-item 1</a>
+
+                              <ul class="dropdown"><li class="title back js-generated"><h5><a href="#">« Back</a></h5></li>
+                                <li><label>Level Four</label></li>
+                                <li><a href="#">Sub-item 1</a></li>
+                              </ul>
+                            </li>
+                            <li><a href="#">Sub-item 2</a></li>
+                            <li><a href="#">Sub-item 3</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Sub-item 4</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="#">Sub-item 2</a></li>
+                        <li><a href="#">Sub-item 3</a></li>
+                        <li><a href="#">Sub-item 4</a>
+                      </li></ul>
                     </li>
-                    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-                </ul>
-            </nav>
+                    <li><a href="#">Sub-item 5</a></li>
+                  </ul>
+                </li>
+                <li class="divider"></li>
+              </ul>
+              <!-- Right Nav Section -->
+              <ul class="right">
+                <li class="divider hide-for-small"></li>
+                <li><a href="#">Messages <span class="top-bar-unread">3</span></a></li>
+                <li class="divider hide-for-small"></li>
+                <li><a href="#">Item 2</a></li>
+              </ul>
+            </section></nav>
+
         </div>
-    </div>
+      </div>
     <div class="left-align">
+        <div id="nav">
+            <h1>
+                CSS</h1>
+            <h2>
+                <a href="#">css入门</a></h2>
+            <h2>
+                <a href="#">css进阶</a></h2>
+            <h2>
+                <a href="#">css高级</a></h2>
+            <h1>
+                webUI</h1>
+            <h2>
+                <a href="#">理论知识</a></h2>
+            <h2>
+                <a href="#">实战应用</a></h2>
+            <h2>
+                <a href="#">高级技巧</a></h2>
+            <h1>
+                DOM</h1>
+            <h2>
+                <a href="#">DOM入门</a></h2>
+            <h2>
+                <a href="#">DOM应用</a></h2>
+            <h2>
+                <a href="#">DOM与浏览器</a></h2>
+            <h1>
+                XHTML</h1>
+            <h2>
+                <a href="#">参考手册</a></h2>
+            <h2>
+                <a href="#">交流论坛</a></h2>
+        </div>
     </div>
     <div class="right-align">
     </div>
